=head1 OmniPITR

=head2 2011-03-24

=over

=item * Fix typo in generated .backup file - harmless as far as I know.

=back

=head2 2011-03-11

=over

=item * Fix handling of pidfile in backup-master and backup-slave programs. Bug
spotted by Albert Czarnecki

=back

=head2 2011-02-10

=over

=item * Make the IMMEDIATE finish of recovery actually work.

=item * Make omnipitr-backup-slave compatible with Streaming Replication in
PostgreSQL 9.0

=item * Add option (--streaming-replication) to make it possible to use
omnipitr-restore in 9.0 Streaming Replication environment.

=back

=head2 2011-01-27

=over

=item * Silence warning if source is not defined on the command line

=back

=head2 2011-01-27

=over

=item * Silence warning if source is not defined on the command line

=back

=head2 2011-01-24

=over

=item * Add detection of tar version to sanity-check.sh

=back

=head2 2011-01-20

=over

=item * Add internals.pod with first part of documentation of "how it works, and
why this way"

=back

=head2 2011-01-14

=over

=item * Locate any tablespaces in the data dir and include them in the backup
for both masters and slaves.  In the tar file these will be placed under the
'tablespaces' directory.

=back

=head2 2011-01-12

=over

=item * localize signal handler so that it does not get called outside of the
function call

=back

=head2 2011-01-05

=over

=item * Add proper stub for make_xlog_archive in OmniPITR::Program::Backup, that
enforces reimplementation in child classes.

=back

=head2 2010-09-28

=over

=item * Fix error with handling master backups where given data-dir contained
trailing / character

=back

=head2 2010-09-10

=over

=item * Fix error handling for pg_controldata

=back

=head2 2010-09-08

=over

=item * Add option to handle various ways of dealing with problems with calls to
pg_controldata (--error-pgcontroldata) to omnipitr-restore

=back

=head2 2010-09-07

=over
