@@ -14,6 +14,7 @@ use File::Spec;
 use File::Path qw( mkpath rmtree );
 use File::Copy;
 use Storable;
+use Cwd qw(abs_path);
 use Getopt::Long qw( :config no_ignore_case );
 
 =head1 make_data_archive()
@@ -345,6 +346,8 @@ sub validate_args {
     $self->log->fatal( 'Provided data-dir (%s) does not exist!',   $self->{ 'data-dir' } ) unless -e $self->{ 'data-dir' };
     $self->log->fatal( 'Provided data-dir (%s) is not directory!', $self->{ 'data-dir' } ) unless -d $self->{ 'data-dir' };
     $self->log->fatal( 'Provided data-dir (%s) is not readable!',  $self->{ 'data-dir' } ) unless -r $self->{ 'data-dir' };
+
+    $self->{ 'data-dir' } = abs_path( $self->{ 'data-dir' } );
 
     my $dst_count = scalar( @{ $self->{ 'destination' }->{ 'local' } } ) + scalar( @{ $self->{ 'destination' }->{ 'remote' } } );
     $self->log->fatal( "No --dst-* has been provided!" ) if 0 == $dst_count;
