@@ -1,5 +1,14 @@
 =head1 OmniPITR
 
+=head2 2011-05-18
+
+=over
+
+=item * Allow omnipitr-backup-master and omnipitr-backup-slave to work when data
+dir path is given as symlink
+
+=back
+
 =head2 2011-03-24
 
 =over
